Updated index.html and style.css based on review feedback from cyouh95

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <link rel="stylesheet" href="./resources/style.css" type="text/css" />
 </head>
 <body>
+
   <div>
     <h1>Dasmoto's Arts & Crafts</h1>
   </div>
-  <nav><a href="#brushes">&nbsp&nbspBrushes&nbsp&nbsp</a>&nbsp
-    <a href="#frames">&nbsp&nbspFrames&nbsp&nbsp</a>&nbsp
-    <a href="#paint">&nbsp&nbspPaint&nbsp&nbsp</a> </nav>
+
+  <nav><a href="#brushes">Brushes</a>&nbsp
+    <a href="#frames">Frames</a>&nbsp
+    <a href="#paint">Paint</a>
+  </nav>
+
   <div id="brushes">
-    <h2 class="mediumspringgreen">Brushes</h2>
+    <h2>Brushes</h2>
     <img src="./resources/images/hacksaw.jpeg" alt="Hacksaw Brushes" />
     <h3>Hacksaw Brushes</h3>
     <p>Made of the highest quality oak, Hacksaw brushes are known for their
@@ -23,8 +27,9 @@
       sizes. <span class="price">Starting at $3.00 / brush.</span>
     </p>
   </div>
+
   <div id="frames">
-    <h2 class="lightcoral">Frames</h2>
+    <h2>Frames</h2>
     <img src="./resources/images/frames.jpeg" alt="Assorted Art Frames" />
     <h3>Art Frames (assorted)</h3>
     <p>Assorted frames made of different material, including MDF, birchwood,
@@ -32,8 +37,9 @@
       <span class="price">Starting at $2.00 / frame.</span>
     </p>
   </div>
+
   <div id="paint">
-    <h2 class="skyblue">Paint</h2>
+    <h2>Paint</h2>
     <img src="./resources/images/finnish.jpeg" alt="Clean Finnish Paint" />
     <h3>Clean Finnish Paint</h3>
     <p>Imported paint from Finland. Over 256 colors available in-store, varying
@@ -42,5 +48,6 @@
       <span class="price">Starting at $5.00 / tube.</span>
     </p>
   </div>
+
 </body>
 </html>
