Replaced non-blocking space padding between <a> elements in the <nav> with margin-left property in the css. Added a 3px outset border in lightgrey to the <a> elements in the <nav> to give a button look.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Dasmoto's Arts & Crafts</h1>
   </div>
 
-  <nav><a href="#brushes">Brushes</a>&nbsp
-    <a href="#frames">Frames</a>&nbsp
+  <nav><a href="#brushes">Brushes</a>
+    <a href="#frames">Frames</a>
     <a href="#paint">Paint</a>
   </nav>
 
